samples/_failures_safe/1761160804_7f38a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37231d66.c: In function ‘main’:
./samples/SAFE/__tmp_37231d66.c:135:5: error: expected declaration or statement at end of input
  135 |     a = create_matrix(rows, cols);
      |     ^
